--- a/Git/MaterialDessign/app/src/main/res/values/strings.xml
+++ b/Git/MaterialDessign/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">MaterialDessign</string>
+    <string name="app_name">Mascotas</string>
+    <string name="mascota">Mascota</string>
+    <string name="raza">Raza</string>
 </resources>
